@@ -1,3 +1,7 @@
+2007-11-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* add latlon and lonlat as aliases.
+
 2007-11-29  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Prepare 4.6.0beta1 release.
